ScrobblerAdapter: call submit() explicitly

BUGFIXES:
 * Prevent Last.fm scrobbles not being submitted until restart due to
   change in liblastfm 1.0.7.

Thanks to David Walser for debugging this with liblastfm author Michael
Coffey.

Work-around for Amarok <= 2.7.1 is to use liblastfm <= 1.0.6.

BUG: 320219
FIXED-IN: 2.8
CCMAIL: Michael Coffey <michaelc@last.fm>